# MagangBanyubramanta_DanielAdhitthana

./: .gitignore  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build  latest_list
matlab/: Color.m  mission_manager.slx  mission_manager.slxc
matlab/slprj/_jitprj/: jitEngineAccessInfo.mat  s1fSwcvuUpkEGvPsdNXg7K.l  s1fSwcvuUpkEGvPsdNXg7K.mat  sICuKvOUhKIw6T2O3oVmhOD.l  sICuKvOUhKIw6T2O3oVmhOD.mat  sTfkDIGt9NcJQoyuP99hI4B.l  sTfkDIGt9NcJQoyuP99hI4B.mat  sWTybtr5bXhzOSoUOfWVLdF.l  sWTybtr5bXhzOSoUOfWVLdF.mat  sX3w7WcdUzBo0ISoDqMhw6G.l  sX3w7WcdUzBo0ISoDqMhw6G.mat  sZmnib01ar6Mm31alVQnorB.l  sZmnib01ar6Mm31alVQnorB.mat  se8ZBcvxo9JbymWNfofqsnE.l  se8ZBcvxo9JbymWNfofqsnE.mat  sgY9C9xWVZJLL4mhYXex6fC.l  sgY9C9xWVZJLL4mhYXex6fC.mat  slyDQOC2mqxD6eAmbTuCZUH.l  slyDQOC2mqxD6eAmbTuCZUH.mat  sqJKc6tMvDs6bBnoRB7BXRE.l  sqJKc6tMvDs6bBnoRB7BXRE.mat  symq1nbaLS8vmnurF2RPlhC.mat  szt6dDnBul49XdiTZb4MOB.l  szt6dDnBul49XdiTZb4MOB.mat
ros2/install/: local_setup.sh  setup.sh
ros2/log/: latest_build
ros2/src/camera/: README.md
ros2/src/controller/: CMakeLists.txt
ros2/src/interfaces/: CMakeLists.txt  package.xml
ros2/src/yolo/: README.md  package.xml
src/camera/: CMakeLists.txt  README.md  package.xml
src/camera/src/: node.cpp
src/communicator/: CMakeLists.txt  package.xml
src/communicator/src/: node.cpp
src/controller/: CMakeLists.txt  package.xml
src/controller/src/: controller.cpp  publisher.cpp
src/interfaces/: LICENSE
src/yolo/: CMakeLists.txt  README.md
src/yolo/src/: node.cpp
(+252 files in other folders)
